--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 # termion = "1"
 rand = "0.8.5"
 rand_xorshift = "0.3"
@@ -15,6 +16,7 @@ rand_xorshift = "0.3"
 lto = true
 panic = 'abort'
 codegen-units = 1
+debug = true
 
 [build]
 rustflags = ["-Ctarget-cpu=native"]
