--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ rand_xorshift = "0.3"
 [profile.release]
 lto = true
 panic = 'abort'
-codegen-units = 1
-debug = true
+# codegen-units = 1
+# debug = true
 
 [build]
 rustflags = ["-Ctarget-cpu=native"]
