--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ bincode = "1.3.3"
 # termion = "1"
 rand = "0.8.5"
 rand_xorshift = "0.3"
+serde = {version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
 
 
 [profile.release]
