feat improve usage of transposition table & refactor directory configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 /target
-stderr.log
 Cargo.lock
-log.txt
-output.txt
-0000_egaroucid_6_3_0_lv11
-ffotest
-flamegraph.svg
-test.perf
-tmp*
-src/spnt.txt
-Egaroucid_Transcript
-output*
-out_rust_code.py
+
+data/training_data
+
+res/eval_intermediate_data.json
